<resources>
    <string name="app_name">Тренажер словарного запаса</string>
    <string name="enter_the_word">Введите слово</string>
    <string name="enter_the_translation">Введите перевод</string>
    <string name="auto_translate">Автоматический перевод</string>
    <string name="add_word">Добавить слово</string>
    <string name="need_to_enter_a_word">Необходимо ввести слово</string>
    <string name="need_to_enter_a_translation">Необходимо ввести перевод</string>
    <string name="word_translate_separator">-</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="change_word">Изменить слово</string>
    <string name="dictionary">Словрь</string>
    <string name="training_mode">Режим тренировки</string>
    <string name="word_of_the_day">Слово дня</string>
    <string name="last_update">lastUpdate</string>
    <string name="your_dict_is_empty">Ваш словарь пуст</string>
    <string name="daily_word">dailyWord</string>
    <string name="daily_word_translation">dailyWordTranslation</string>
    <string name="isNotificationsEnabled">isNotificationsEnabled</string>
    <string name="enable_notifications">Включить уведомления</string>
</resources>
