<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="16dp">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/new_word"
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_word"
                android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/new_translation"
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_translation"
                android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/auto_translate"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_translate"
            android:layout_margin="5dp"/>

    <Button
            android:id="@+id/add_new_word"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_word"
            android:textColor="#FFF"
            android:translationZ="2dp"/>

</LinearLayout>
